--- a/spring-learn/build.gradle
+++ b/spring-learn/build.gradle
@@ -10,10 +10,12 @@ repositories {
 }
 
 dependencies {
+    implementation project(path: ':spring-jdbc')
     compile(project(":spring-core"))
     compile(project(":spring-aop"))
     compile(project(":spring-beans"))
     compile(project(":spring-context"))
     optional("org.aspectj:aspectjweaver")
+    optional("mysql:mysql-connector-java:5.1.48")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
